# EmbedPyExample

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
src/: main.cpp
